--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,12 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name='primary_chat'>#1C2E46</color>
+    <color name='primary_dark'>#142232</color>
+    <color name='primary_text'>#212121</color>
+    <color name='secondary_text'>#757575</color>
+    <color name='input_background'>#ECECEC</color>
+    <color name='icon_background'>#20FFFFFF</color>
+    <color name='error'>#B00020</color>
+    <color name='recieved_message_background'>#090D16</color>
 </resources>
