frontend-5: added logic (for presentation purposes). can't drop an object to target, if it has the same description.

--- a/app/src/main/res/layout/fragment_clues_guesses.xml
+++ b/app/src/main/res/layout/fragment_clues_guesses.xml
@@ -38,6 +38,7 @@
                     android:id="@+id/image_suspicion_right"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
+                    android:tag="ort:default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/image_suspicion_middle"
@@ -48,6 +49,7 @@
                     android:id="@+id/image_suspicion_left"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
+                    android:tag="waffe:default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/image_suspicion_middle"
                     app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +60,7 @@
                     android:id="@+id/image_suspicion_middle"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
+                    android:tag="person:default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
