button text adjusted

--- a/app/src/main/res/layout/fragment_clues_guesses.xml
+++ b/app/src/main/res/layout/fragment_clues_guesses.xml
@@ -12,7 +12,7 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Confirm"
+            android:text="@string/confirm_guess"
             app:layout_constraintBottom_toTopOf="@+id/cardView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -86,7 +86,6 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3"
             android:textAlignment="center"
             android:textSize="34sp"
             app:layout_constraintBottom_toTopOf="@+id/recycler_view_clues_guesses"
