frontend-17: visual overhaul. navbar now hides when typing. message receive every 10 seconds.

--- a/app/src/main/res/layout/fragment_comms.xml
+++ b/app/src/main/res/layout/fragment_comms.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_comms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
@@ -14,38 +15,17 @@
             android:id="@+id/viewBackground"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="@dimen/_6sdp"
-            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="60dp"
             android:background="@drawable/background_content_chat"
-            app:layout_constraintBottom_toTopOf="@id/layoutSend"
+            app:layout_constraintBottom_toBottomOf="@id/inputMessage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintVertical_bias="0.0" />
 
-        <TextView
-            android:id="@+id/textName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_8sdp"
-            android:layout_marginEnd="@dimen/_8sdp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/primary_text"
-            android:textSize="@dimen/_14ssp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/viewBackground"
-            app:layout_constraintEnd_toStartOf="@id/viewBackground"
-            app:layout_constraintTop_toTopOf="@id/viewBackground"
-            app:layout_constraintStart_toEndOf="@id/viewBackground"/>
-
-        <View
-            android:id="@+id/viewSupporter"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/primary_chat"
-            android:layout_marginTop="@dimen/_12sdp"
-            app:layout_constraintTop_toTopOf="@+id/viewBackground" />
-        
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatRecyclerView"
             android:layout_width="match_parent"
@@ -53,53 +33,57 @@
             android:clipToPadding="false"
             android:orientation="vertical"
             android:overScrollMode="never"
-            android:padding="@dimen/_20sdp"
-            app:stackFromEnd="true"
-            android:visibility="gone"
+            android:padding="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="@id/viewBackground"
-            app:layout_constraintTop_toTopOf="@+id/viewSupporter" />
+            app:layout_constraintBottom_toBottomOf="@+id/viewBackground"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:stackFromEnd="true" />
 
         <FrameLayout
             android:id="@+id/layoutSend"
-            android:layout_width="@dimen/_40sdp"
-            android:layout_height="@dimen/_40sdp"
-            android:layout_marginEnd="@dimen/_16sdp"
-            android:layout_marginBottom="@dimen/_54sdp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/background_chat_input"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.885">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/_4sdp"
-                android:layout_marginLeft="@dimen/_4sdp"
-                android:padding="@dimen/_8sdp"
+                android:layout_marginStart="4dp"
+                android:padding="8dp"
                 android:src="@drawable/ic_send"
-                android:tint="@color/white"/>
+                android:tint="@color/white" />
 
         </FrameLayout>
-            <EditText
-                android:id="@+id/inputMessage"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:layout_marginLeft="@dimen/_16sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
-                android:layout_marginRight="@dimen/_8sdp"
-                android:layout_marginBottom="@dimen/_54sdp"
-                android:background="@drawable/background_chat_input"
-                android:hint="@string/type_a_message"
-                android:imeOptions="actionDone"
-                android:importantForAutofill="no"
-                android:inputType="text"
-                android:paddingStart="@dimen/_16sdp"
-                android:paddingEnd="@dimen/_16sdp"
-                android:textColor="@color/white"
-                android:textColorHint="@color/secondary_text"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/layoutSend"
-                app:layout_constraintStart_toStartOf="parent"/>
+
+        <EditText
+            android:id="@+id/inputMessage"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/background_chat_input"
+            android:hint="@string/type_a_message"
+            android:imeOptions="actionNone"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textColor="@color/white"
+            android:textColorHint="#78909C"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/layoutSend"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/viewBackground"
+            app:layout_constraintVertical_bias="0.89" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
