--- a/app/src/main/res/layout/item_container_sent_massage.xml
+++ b/app/src/main/res/layout/item_container_sent_massage.xml
@@ -22,8 +22,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:minWidth="60dp"
-            android:minHeight="50dp">
+            android:minWidth="60dp">
 
             <TextView
                 android:id="@+id/textMessage"
@@ -31,11 +30,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
-                android:paddingEnd="5dp"
-                android:paddingBottom="5dp"
+                android:maxEms="16"
                 android:textColor="@color/white"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/textDateTime"
                 app:layout_constraintEnd_toStartOf="@+id/textDateTime"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
