frontend-21: added pseudonym in ChatMessage and ParsedMessage. changed animation for the better. Changed commslayout a bit. Setup for direct messages.

--- a/app/src/main/res/layout/fragment_comms_softkeyboard.xml
+++ b/app/src/main/res/layout/fragment_comms_softkeyboard.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraint_comms"
+        android:id="@+id/constraint_comms_transition"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
@@ -48,7 +48,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/viewBackground"
             app:layout_constraintEnd_toEndOf="@+id/viewBackground"
             app:layout_constraintStart_toStartOf="@+id/viewBackground"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
+            app:layout_constraintTop_toTopOf="@+id/viewBackground"
             app:stackFromEnd="true" />
 
         <FrameLayout
@@ -58,7 +58,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/background_chat_input"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,22 +91,12 @@
             android:paddingEnd="16dp"
             android:textColor="@color/white"
             android:textColorHint="#78909C"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/layoutSend"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
