--- a/app/src/main/res/layout/fragment_comms.xml
+++ b/app/src/main/res/layout/fragment_comms.xml
@@ -11,45 +11,18 @@
         android:background="@color/primary_chat"
         tools:context=".ui.comms.CommsFragment">
 
-        <View
-            android:id="@+id/viewBackground"
-            android:layout_width="match_parent"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPager"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="12dp"
-            android:background="@drawable/background_content_chat_bubble"
             app:layout_constraintBottom_toTopOf="@+id/inputMessage"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="50dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintEnd_toEndOf="@+id/viewBackground"
-            app:layout_constraintStart_toStartOf="@+id/viewBackground"
-            app:layout_constraintTop_toTopOf="@+id/viewBackground" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chatRecyclerView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:overScrollMode="never"
-            android:padding="20dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="@+id/viewBackground"
-            app:layout_constraintEnd_toEndOf="@+id/viewBackground"
-            app:layout_constraintStart_toStartOf="@+id/viewBackground"
-            app:layout_constraintTop_toBottomOf="@+id/divider"
-            app:stackFromEnd="true" />
 
         <FrameLayout
             android:id="@+id/layoutSend"
@@ -66,7 +39,7 @@
             app:layout_constraintVertical_bias="1.0">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="4dp"
                 android:padding="8dp"
