frontend-22: changed Visuals (Colors and Guesses Left). Now uses Solution from Server.

--- a/app/src/main/res/layout/fragment_clues_guesses.xml
+++ b/app/src/main/res/layout/fragment_clues_guesses.xml
@@ -10,8 +10,8 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="346dp"
-            android:layout_height="100dp"
+            android:layout_width="wrap_content"
+            android:layout_height="90dp"
             app:cardCornerRadius="20dp"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
@@ -26,8 +26,10 @@
 
                 <ImageView
                     android:id="@+id/image_suspicion_right"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginStart="30dp"
+                    android:layout_marginEnd="24dp"
                     android:tag="ort:default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -37,8 +39,10 @@
 
                 <ImageView
                     android:id="@+id/image_suspicion_left"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="32dp"
                     android:tag="waffe:default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/image_suspicion_middle"
@@ -48,8 +52,8 @@
 
                 <ImageView
                     android:id="@+id/image_suspicion_middle"
-                    android:layout_width="75dp"
-                    android:layout_height="75dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     android:tag="person:default"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -67,21 +71,10 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.36" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textSize="34sp"
-            app:layout_constraintBottom_toTopOf="@+id/recycler_view_clues_guesses"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintVertical_bias="0.4" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView2"
@@ -92,6 +85,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/bottom_menu" />
+
+        <ImageView
+            android:id="@+id/imageNumberOfGuesses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/recycler_view_clues_guesses"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/number_of_tries3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
