--- a/app/src/main/res/layout/fragment_comms_softkeyboard.xml
+++ b/app/src/main/res/layout/fragment_comms_softkeyboard.xml
@@ -71,5 +71,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
 
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_menu" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
