--- a/app/src/main/res/layout/fragment_comms.xml
+++ b/app/src/main/res/layout/fragment_comms.xml
@@ -11,6 +11,50 @@
         android:background="@color/primary_chat"
         tools:context=".ui.comms.CommsFragment">
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/viewTabs"
+            style="@style/CustomCardViewStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="8dp"
+            app:cardElevation="2dp"
+            app:cardMaxElevation="5dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="false"
+            app:layout_constraintBottom_toTopOf="@+id/viewPager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:color/transparent"
+                    android:fadingEdgeLength="50dp"
+                    android:requiresFadingEdge="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tabIndicatorColor="@color/design_default_color_primary"
+                    app:tabMode="scrollable"
+                    app:tabPaddingEnd="12dp"
+                    app:tabPaddingStart="12dp"
+                    app:tabRippleColor="@null"
+                    app:tabSelectedTextColor="@color/design_default_color_primary"
+                    app:tabTextColor="@color/primary_text" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
             android:layout_width="0dp"
@@ -18,7 +62,8 @@
             app:layout_constraintBottom_toTopOf="@+id/inputMessage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/viewTabs" />
+
 
         <FrameLayout
             android:id="@+id/layoutSend"
