--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <Button
         android:id="@+id/buttonRegister"
@@ -81,18 +82,18 @@
         app:boxBackgroundColor="@color/design_default_color_background"
         app:boxCollapsedPaddingTop="10dp"
         app:counterEnabled="true"
-        app:errorEnabled="true"
         app:counterMaxLength="10"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/prenameLayout">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:imeOptions="actionDone"
             android:id="@+id/pseudonymInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Player Name"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
             android:textColorHint="#616161" />
@@ -104,8 +105,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintGuide_percent="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
