--- a/app/src/main/res/layout/hint_row.xml
+++ b/app/src/main/res/layout/hint_row.xml
@@ -7,11 +7,11 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:cardBackgroundColor="@color/design_default_color_secondary"
+        app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="20dp"
         app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -35,21 +35,23 @@
 
             <TextView
                 android:id="@+id/hint_category"
-                android:text="@string/hint_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
+                android:text="@string/hint_category"
+                android:textColor="@color/secondary_text"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/hint_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/hint_text"
-                android:text="@string/hint_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
+                android:text="@string/hint_description"
+                android:textColor="@color/secondary_text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/hint_image"
                 app:layout_constraintTop_toBottomOf="@id/hint_category" />
